<resources>
    <string name="app_name">Tourismo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_map_location">MapLocation</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_maps_main">Map</string>
    <string name="degree">32\u00B0</string>
    <string name="degree2">25\u00B0</string>
    <string name="title_activity_social_dinning_main">SocialDinningMain</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    
    <!--LogIn-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotpassword">Forgot Password? </string>
    <string name="taphere"> <u>Tap here</u>.</string>
    <string name="or">OR</string>
    
    
    <!--Feature Selection-->
    <string name="timeconverter">Time Converter</string>
    <string name="findnearby">Find Nearby</string>
    <string name="currencyconverter">Currency Converter</string>
    <string name="travelitinerary">Travel Planner</string>
    <string name="contactservices">Local Contacts</string>
    <string name="weather">Weather</string>
    <string name="translator">Translator</string>
    <string name="socialdining">Social Dinning</string>
    <string name="uploads">TravelTube</string>



    <!--Time Converter-->
    <string name="timezones">Time Zones</string>

    <!--Currency Converter-->
    <string name="convert">Convert</string>
    <string name="entervalue">Enter Value Here</string>
    <string name="from">From:</string>
    <string name="to">To:</string>

    <!--MAP Activity-->
    <string name="selectFilter">Select Filter</string>

    <!--Local Contacts-->
    <string name="localcontacts">Local Contacts</string>


</resources>
